# trashy

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  README  README.md  README.md~  configure.ac  doinst.sh  empty  install.sh  trash  trash.8  trashy  trashy.8  trashy.SlackBuild  trashy.info  trashy.spec
slackware/: trashy.SlackBuild  trashy.spec
